# hello-world

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt
src/: main.py
tests/: test_main.py
