[project]
name = "hello-world"
version = "0.1.0"
description = "Minimal greeting CLI scaffold."
requires-python = ">=3.10"

[tool.black]
line-length = 88
target-version = ["py310"]
skip-string-normalization = true

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra"
